# IconGenerationTool

./: .gitignore  IconGenerationTool.spec  README.md  pyproject.toml
scripts/: build.ps1
src/icon_tool/: app.py
